@@ -1,7 +1,7 @@
-EBUILD texlive-2007.ebuild 5310 RMD160 b6ed1e50c6fe616bebff09701fcb358023e6e21d SHA1 f4d48ac7dba8086db03f5343809a0331fac4a82a SHA256 4d8ed60a69048da46f01a8b9e470b9fdbb9b58f1c0f5bc20f2a59a7d52396c98
-MD5 9023f45ab353dc12e5b04151a6a90187 texlive-2007.ebuild 5310
-RMD160 b6ed1e50c6fe616bebff09701fcb358023e6e21d texlive-2007.ebuild 5310
-SHA256 4d8ed60a69048da46f01a8b9e470b9fdbb9b58f1c0f5bc20f2a59a7d52396c98 texlive-2007.ebuild 5310
+EBUILD texlive-2007.ebuild 5302 RMD160 3be02f50b62bc9766634f5b52859b2062e73932f SHA1 c64719ebe2a85df0a657a707213301fb7e075e59 SHA256 4928a49cadff6add8f31cb4f09799c5009cc51fc6c9eec07f54e1e3afac9a030
+MD5 f639c537ba9c04d208ee83c83443b032 texlive-2007.ebuild 5302
+RMD160 3be02f50b62bc9766634f5b52859b2062e73932f texlive-2007.ebuild 5302
+SHA256 4928a49cadff6add8f31cb4f09799c5009cc51fc6c9eec07f54e1e3afac9a030 texlive-2007.ebuild 5302
 MISC ChangeLog 392 RMD160 f9582674beb3e473c670578c2309dd32f5c37f86 SHA1 82c424242362ac701434204cd941725a24c850f9 SHA256 e51d774a2bcff24a69b45eb4ffa3c26240157ffa675c202c6473873ad93ba972
 MD5 c9d11fb3204b6a0ffe5c30e2577cb1bf ChangeLog 392
 RMD160 f9582674beb3e473c670578c2309dd32f5c37f86 ChangeLog 392
